// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`dropdown is not visible if items fit 1`] = `
.c8 {
  vertical-align: middle;
  height: 1.5rem;
  width: 1.5rem;
}

.c0 {
  box-sizing: border-box;
}

.c9 {
  box-sizing: border-box;
  z-index: 1060;
}

.c1 {
  flex-direction: row;
  flex-wrap: nowrap;
  display: flex;
}

.c2 {
  align-self: auto;
  flex-basis: auto;
  flex-grow: 0;
  order: 0;
  flex-shrink: 1;
}

.c3 {
  transition: all 150ms ease-out;
  transition-property: background-color,border-color,box-shadow,color;
  align-items: center;
  appearance: none;
  border: 1px solid #D9DCE9;
  border-radius: 0.25rem;
  color: #FFFFFF;
  cursor: pointer;
  display: inline-flex;
  flex: none;
  font-size: 1rem;
  font-weight: 400;
  height: 2.25rem;
  justify-content: center;
  line-height: 2rem;
  outline: none;
  padding: 0 1rem;
  position: relative;
  text-align: center;
  text-decoration: none;
  user-select: none;
  vertical-align: middle;
  white-space: nowrap;
  width: 100%;
  background-color: transparent;
  border-color: transparent;
  color: #3C64F4;
}

.c3.c3 {
  margin-right: 0.5rem;
}

.c3:focus {
  outline: none;
}

.c3[disabled] {
  border-color: #D9DCE9;
  pointer-events: none;
}

.c3+.bd-button {
  margin-top: 0.5rem;
}

.c3:active {
  background-color: #DBE3FE;
}

.c3:focus {
  box-shadow: 0 0 0 0.25rem #DBE3FE;
}

.c3:hover:not(:active) {
  background-color: #F0F3FF;
}

.c3[disabled] {
  border-color: transparent;
  color: #D9DCE9;
}

.c7 {
  transition: all 150ms ease-out;
  transition-property: background-color,border-color,box-shadow,color;
  align-items: center;
  appearance: none;
  border: 1px solid #D9DCE9;
  border-radius: 0.25rem;
  color: #FFFFFF;
  cursor: pointer;
  display: inline-flex;
  flex: none;
  font-size: 1rem;
  font-weight: 400;
  height: 2.25rem;
  justify-content: center;
  line-height: 2rem;
  outline: none;
  padding: 0 1rem;
  position: relative;
  text-align: center;
  text-decoration: none;
  user-select: none;
  vertical-align: middle;
  white-space: nowrap;
  width: 100%;
  background-color: transparent;
  border-color: transparent;
  color: #3C64F4;
}

.c7:focus {
  outline: none;
}

.c7[disabled] {
  border-color: #D9DCE9;
  pointer-events: none;
}

.c7+.bd-button {
  margin-top: 0.5rem;
}

.c7:active {
  background-color: #DBE3FE;
}

.c7:focus {
  box-shadow: 0 0 0 0.25rem #DBE3FE;
}

.c7:hover:not(:active) {
  background-color: #F0F3FF;
}

.c7[disabled] {
  border-color: transparent;
  color: #D9DCE9;
}

.c4 {
  align-content: center;
  align-items: center;
  display: inline-grid;
  grid-auto-flow: column;
  grid-gap: 0.5rem;
}

.c10 {
  border-radius: 0.25rem;
  box-shadow: 0px 1px 6px rgba(49,52,64,0.2);
  background-color: #FFFFFF;
  color: #313440;
  margin: 0;
  max-height: 15.625rem;
  outline: none;
  overflow-y: auto;
  padding: 0.5rem 0;
  z-index: 1060;
}

.c6 {
  position: relative;
}

.c5 {
  position: absolute;
  visibility: hidden;
  z-index: -1070;
}

@media (min-width: 720px) {
  .c3+.bd-button {
    margin-top: 0;
    margin-left: 0.5rem;
  }
}

@media (min-width: 720px) {
  .c3 {
    width: auto;
  }
}

@media (min-width: 720px) {
  .c7+.bd-button {
    margin-top: 0;
    margin-left: 0.5rem;
  }
}

@media (min-width: 720px) {
  .c7 {
    width: auto;
    padding: 0;
    min-width: 2.25rem;
  }
}

<div
  class="c0 c1"
  data-testid="pilltabs-wrapper"
  role="list"
>
  <div
    class="c0 c2 "
    data-testid="pilltabs-pill-0"
    role="listitem"
  >
    <button
      class="c3 "
    >
      <span
        class="c4"
      >
        In stock
      </span>
    </button>
  </div>
  <div
    class="c0 c2 c5"
    data-testid="pilltabs-dropdown-toggle"
    role="listitem"
  >
    <div
      class="c0 c6"
    >
      <button
        aria-activedescendant=""
        aria-controls=":r2:-menu"
        aria-expanded="false"
        aria-haspopup="menu"
        class="c7 bd-button"
        id=":r2:-toggle-button"
        role="button"
        tabindex="0"
      >
        <span
          class="c4"
        >
          <svg
            aria-labelledby=":r3:"
            class="c8"
            fill="currentColor"
            height="24"
            stroke="currentColor"
            stroke-width="0"
            viewBox="0 0 24 24"
            width="24"
          >
            <title
              id=":r3:"
            >
              add
            </title>
            <path
              d="M0 0h24v24H0V0z"
              fill="none"
            />
            <path
              d="M6 10c-1.1 0-2 .9-2 2s.9 2 2 2 2-.9 2-2-.9-2-2-2zm12 0c-1.1 0-2 .9-2 2s.9 2 2 2 2-.9 2-2-.9-2-2-2zm-6 0c-1.1 0-2 .9-2 2s.9 2 2 2 2-.9 2-2-.9-2-2-2z"
            />
          </svg>
        </span>
      </button>
      <div
        class="c9"
        style="position: absolute; left: 0px; top: 0px;"
      >
        <ul
          aria-labelledby=":r2:-label"
          class="c10"
          id=":r2:-menu"
          role="menu"
        />
      </div>
    </div>
  </div>
</div>
`;

exports[`it renders the given tabs 1`] = `
.c8 {
  vertical-align: middle;
  height: 1.5rem;
  width: 1.5rem;
}

.c0 {
  box-sizing: border-box;
}

.c9 {
  box-sizing: border-box;
  z-index: 1060;
}

.c1 {
  flex-direction: row;
  flex-wrap: nowrap;
  display: flex;
}

.c2 {
  align-self: auto;
  flex-basis: auto;
  flex-grow: 0;
  order: 0;
  flex-shrink: 1;
}

.c3 {
  transition: all 150ms ease-out;
  transition-property: background-color,border-color,box-shadow,color;
  align-items: center;
  appearance: none;
  border: 1px solid #D9DCE9;
  border-radius: 0.25rem;
  color: #FFFFFF;
  cursor: pointer;
  display: inline-flex;
  flex: none;
  font-size: 1rem;
  font-weight: 400;
  height: 2.25rem;
  justify-content: center;
  line-height: 2rem;
  outline: none;
  padding: 0 1rem;
  position: relative;
  text-align: center;
  text-decoration: none;
  user-select: none;
  vertical-align: middle;
  white-space: nowrap;
  width: 100%;
  background-color: transparent;
  border-color: transparent;
  color: #3C64F4;
}

.c3.c3 {
  margin-right: 0.5rem;
}

.c3:focus {
  outline: none;
}

.c3[disabled] {
  border-color: #D9DCE9;
  pointer-events: none;
}

.c3+.bd-button {
  margin-top: 0.5rem;
}

.c3:active {
  background-color: #DBE3FE;
}

.c3:focus {
  box-shadow: 0 0 0 0.25rem #DBE3FE;
}

.c3:hover:not(:active) {
  background-color: #F0F3FF;
}

.c3[disabled] {
  border-color: transparent;
  color: #D9DCE9;
}

.c7 {
  transition: all 150ms ease-out;
  transition-property: background-color,border-color,box-shadow,color;
  align-items: center;
  appearance: none;
  border: 1px solid #D9DCE9;
  border-radius: 0.25rem;
  color: #FFFFFF;
  cursor: pointer;
  display: inline-flex;
  flex: none;
  font-size: 1rem;
  font-weight: 400;
  height: 2.25rem;
  justify-content: center;
  line-height: 2rem;
  outline: none;
  padding: 0 1rem;
  position: relative;
  text-align: center;
  text-decoration: none;
  user-select: none;
  vertical-align: middle;
  white-space: nowrap;
  width: 100%;
  background-color: transparent;
  border-color: transparent;
  color: #3C64F4;
}

.c7:focus {
  outline: none;
}

.c7[disabled] {
  border-color: #D9DCE9;
  pointer-events: none;
}

.c7+.bd-button {
  margin-top: 0.5rem;
}

.c7:active {
  background-color: #DBE3FE;
}

.c7:focus {
  box-shadow: 0 0 0 0.25rem #DBE3FE;
}

.c7:hover:not(:active) {
  background-color: #F0F3FF;
}

.c7[disabled] {
  border-color: transparent;
  color: #D9DCE9;
}

.c4 {
  align-content: center;
  align-items: center;
  display: inline-grid;
  grid-auto-flow: column;
  grid-gap: 0.5rem;
}

.c10 {
  border-radius: 0.25rem;
  box-shadow: 0px 1px 6px rgba(49,52,64,0.2);
  background-color: #FFFFFF;
  color: #313440;
  margin: 0;
  max-height: 15.625rem;
  outline: none;
  overflow-y: auto;
  padding: 0.5rem 0;
  z-index: 1060;
}

.c6 {
  position: relative;
}

.c5 {
  position: absolute;
  visibility: hidden;
  z-index: -1070;
}

@media (min-width: 720px) {
  .c3+.bd-button {
    margin-top: 0;
    margin-left: 0.5rem;
  }
}

@media (min-width: 720px) {
  .c3 {
    width: auto;
  }
}

@media (min-width: 720px) {
  .c7+.bd-button {
    margin-top: 0;
    margin-left: 0.5rem;
  }
}

@media (min-width: 720px) {
  .c7 {
    width: auto;
    padding: 0;
    min-width: 2.25rem;
  }
}

<div
  class="c0 c1"
  data-testid="pilltabs-wrapper"
  role="list"
>
  <div
    class="c0 c2 "
    data-testid="pilltabs-pill-0"
    role="listitem"
  >
    <button
      class="c3 "
    >
      <span
        class="c4"
      >
        In stock
      </span>
    </button>
  </div>
  <div
    class="c0 c2 c5"
    data-testid="pilltabs-dropdown-toggle"
    role="listitem"
  >
    <div
      class="c0 c6"
    >
      <button
        aria-activedescendant=""
        aria-controls=":r0:-menu"
        aria-expanded="false"
        aria-haspopup="menu"
        class="c7 bd-button"
        id=":r0:-toggle-button"
        role="button"
        tabindex="0"
      >
        <span
          class="c4"
        >
          <svg
            aria-labelledby=":r1:"
            class="c8"
            fill="currentColor"
            height="24"
            stroke="currentColor"
            stroke-width="0"
            viewBox="0 0 24 24"
            width="24"
          >
            <title
              id=":r1:"
            >
              add
            </title>
            <path
              d="M0 0h24v24H0V0z"
              fill="none"
            />
            <path
              d="M6 10c-1.1 0-2 .9-2 2s.9 2 2 2 2-.9 2-2-.9-2-2-2zm12 0c-1.1 0-2 .9-2 2s.9 2 2 2 2-.9 2-2-.9-2-2-2zm-6 0c-1.1 0-2 .9-2 2s.9 2 2 2 2-.9 2-2-.9-2-2-2z"
            />
          </svg>
        </span>
      </button>
      <div
        class="c9"
        style="position: absolute; left: 0px; top: 0px;"
      >
        <ul
          aria-labelledby=":r0:-label"
          class="c10"
          id=":r0:-menu"
          role="menu"
        />
      </div>
    </div>
  </div>
</div>
`;

exports[`only the pills that fit are visible 1`] = `
.c8 {
  vertical-align: middle;
  height: 1.5rem;
  width: 1.5rem;
}

.c0 {
  box-sizing: border-box;
}

.c9 {
  box-sizing: border-box;
  z-index: 1060;
}

.c1 {
  flex-direction: row;
  flex-wrap: nowrap;
  display: flex;
}

.c2 {
  align-self: auto;
  flex-basis: auto;
  flex-grow: 0;
  order: 0;
  flex-shrink: 1;
}

.c3 {
  transition: all 150ms ease-out;
  transition-property: background-color,border-color,box-shadow,color;
  align-items: center;
  appearance: none;
  border: 1px solid #D9DCE9;
  border-radius: 0.25rem;
  color: #FFFFFF;
  cursor: pointer;
  display: inline-flex;
  flex: none;
  font-size: 1rem;
  font-weight: 400;
  height: 2.25rem;
  justify-content: center;
  line-height: 2rem;
  outline: none;
  padding: 0 1rem;
  position: relative;
  text-align: center;
  text-decoration: none;
  user-select: none;
  vertical-align: middle;
  white-space: nowrap;
  width: 100%;
  background-color: transparent;
  border-color: transparent;
  color: #3C64F4;
}

.c3.c3 {
  margin-right: 0.5rem;
}

.c3:focus {
  outline: none;
}

.c3[disabled] {
  border-color: #D9DCE9;
  pointer-events: none;
}

.c3+.bd-button {
  margin-top: 0.5rem;
}

.c3:active {
  background-color: #DBE3FE;
}

.c3:focus {
  box-shadow: 0 0 0 0.25rem #DBE3FE;
}

.c3:hover:not(:active) {
  background-color: #F0F3FF;
}

.c3[disabled] {
  border-color: transparent;
  color: #D9DCE9;
}

.c7 {
  transition: all 150ms ease-out;
  transition-property: background-color,border-color,box-shadow,color;
  align-items: center;
  appearance: none;
  border: 1px solid #D9DCE9;
  border-radius: 0.25rem;
  color: #FFFFFF;
  cursor: pointer;
  display: inline-flex;
  flex: none;
  font-size: 1rem;
  font-weight: 400;
  height: 2.25rem;
  justify-content: center;
  line-height: 2rem;
  outline: none;
  padding: 0 1rem;
  position: relative;
  text-align: center;
  text-decoration: none;
  user-select: none;
  vertical-align: middle;
  white-space: nowrap;
  width: 100%;
  background-color: transparent;
  border-color: transparent;
  color: #3C64F4;
}

.c7:focus {
  outline: none;
}

.c7[disabled] {
  border-color: #D9DCE9;
  pointer-events: none;
}

.c7+.bd-button {
  margin-top: 0.5rem;
}

.c7:active {
  background-color: #DBE3FE;
}

.c7:focus {
  box-shadow: 0 0 0 0.25rem #DBE3FE;
}

.c7:hover:not(:active) {
  background-color: #F0F3FF;
}

.c7[disabled] {
  border-color: transparent;
  color: #D9DCE9;
}

.c4 {
  align-content: center;
  align-items: center;
  display: inline-grid;
  grid-auto-flow: column;
  grid-gap: 0.5rem;
}

.c10 {
  border-radius: 0.25rem;
  box-shadow: 0px 1px 6px rgba(49,52,64,0.2);
  background-color: #FFFFFF;
  color: #313440;
  margin: 0;
  max-height: 15.625rem;
  outline: none;
  overflow-y: auto;
  padding: 0.5rem 0;
  z-index: 1060;
}

.c6 {
  position: relative;
}

.c5 {
  position: absolute;
  visibility: hidden;
  z-index: -1070;
}

@media (min-width: 720px) {
  .c3+.bd-button {
    margin-top: 0;
    margin-left: 0.5rem;
  }
}

@media (min-width: 720px) {
  .c3 {
    width: auto;
  }
}

@media (min-width: 720px) {
  .c7+.bd-button {
    margin-top: 0;
    margin-left: 0.5rem;
  }
}

@media (min-width: 720px) {
  .c7 {
    width: auto;
    padding: 0;
    min-width: 2.25rem;
  }
}

<div
  class="c0 c1"
  data-testid="pilltabs-wrapper"
  role="list"
>
  <div
    class="c0 c2 "
    data-testid="pilltabs-pill-0"
    role="listitem"
  >
    <button
      class="c3 "
    >
      <span
        class="c4"
      >
        In stock
      </span>
    </button>
  </div>
  <div
    class="c0 c2 c5"
    data-testid="pilltabs-pill-1"
    role="listitem"
  >
    <button
      class="c3 "
      disabled=""
    >
      <span
        class="c4"
      >
        Filter 2
      </span>
    </button>
  </div>
  <div
    class="c0 c2 c5"
    data-testid="pilltabs-pill-2"
    role="listitem"
  >
    <button
      class="c3 "
      disabled=""
    >
      <span
        class="c4"
      >
        Filter 3
      </span>
    </button>
  </div>
  <div
    class="c0 c2 "
    data-testid="pilltabs-dropdown-toggle"
    role="listitem"
  >
    <div
      class="c0 c6"
    >
      <button
        aria-activedescendant=""
        aria-controls=":r8:-menu"
        aria-expanded="false"
        aria-haspopup="menu"
        class="c7 bd-button"
        id=":r8:-toggle-button"
        role="button"
        tabindex="0"
      >
        <span
          class="c4"
        >
          <svg
            aria-labelledby=":r9:"
            class="c8"
            fill="currentColor"
            height="24"
            stroke="currentColor"
            stroke-width="0"
            viewBox="0 0 24 24"
            width="24"
          >
            <title
              id=":r9:"
            >
              add
            </title>
            <path
              d="M0 0h24v24H0V0z"
              fill="none"
            />
            <path
              d="M6 10c-1.1 0-2 .9-2 2s.9 2 2 2 2-.9 2-2-.9-2-2-2zm12 0c-1.1 0-2 .9-2 2s.9 2 2 2 2-.9 2-2-.9-2-2-2zm-6 0c-1.1 0-2 .9-2 2s.9 2 2 2 2-.9 2-2-.9-2-2-2z"
            />
          </svg>
        </span>
      </button>
      <div
        class="c9"
        style="position: absolute; left: 0px; top: 0px; transform: translate(0px, 4px);"
      >
        <ul
          aria-labelledby=":r8:-label"
          class="c10"
          id=":r8:-menu"
          role="menu"
        />
      </div>
    </div>
  </div>
</div>
`;

exports[`only the pills that fit are visible 2 1`] = `
.c8 {
  vertical-align: middle;
  height: 1.5rem;
  width: 1.5rem;
}

.c0 {
  box-sizing: border-box;
}

.c9 {
  box-sizing: border-box;
  z-index: 1060;
}

.c1 {
  flex-direction: row;
  flex-wrap: nowrap;
  display: flex;
}

.c2 {
  align-self: auto;
  flex-basis: auto;
  flex-grow: 0;
  order: 0;
  flex-shrink: 1;
}

.c3 {
  transition: all 150ms ease-out;
  transition-property: background-color,border-color,box-shadow,color;
  align-items: center;
  appearance: none;
  border: 1px solid #D9DCE9;
  border-radius: 0.25rem;
  color: #FFFFFF;
  cursor: pointer;
  display: inline-flex;
  flex: none;
  font-size: 1rem;
  font-weight: 400;
  height: 2.25rem;
  justify-content: center;
  line-height: 2rem;
  outline: none;
  padding: 0 1rem;
  position: relative;
  text-align: center;
  text-decoration: none;
  user-select: none;
  vertical-align: middle;
  white-space: nowrap;
  width: 100%;
  background-color: transparent;
  border-color: transparent;
  color: #3C64F4;
}

.c3.c3 {
  margin-right: 0.5rem;
}

.c3:focus {
  outline: none;
}

.c3[disabled] {
  border-color: #D9DCE9;
  pointer-events: none;
}

.c3+.bd-button {
  margin-top: 0.5rem;
}

.c3:active {
  background-color: #DBE3FE;
}

.c3:focus {
  box-shadow: 0 0 0 0.25rem #DBE3FE;
}

.c3:hover:not(:active) {
  background-color: #F0F3FF;
}

.c3[disabled] {
  border-color: transparent;
  color: #D9DCE9;
}

.c7 {
  transition: all 150ms ease-out;
  transition-property: background-color,border-color,box-shadow,color;
  align-items: center;
  appearance: none;
  border: 1px solid #D9DCE9;
  border-radius: 0.25rem;
  color: #FFFFFF;
  cursor: pointer;
  display: inline-flex;
  flex: none;
  font-size: 1rem;
  font-weight: 400;
  height: 2.25rem;
  justify-content: center;
  line-height: 2rem;
  outline: none;
  padding: 0 1rem;
  position: relative;
  text-align: center;
  text-decoration: none;
  user-select: none;
  vertical-align: middle;
  white-space: nowrap;
  width: 100%;
  background-color: transparent;
  border-color: transparent;
  color: #3C64F4;
}

.c7:focus {
  outline: none;
}

.c7[disabled] {
  border-color: #D9DCE9;
  pointer-events: none;
}

.c7+.bd-button {
  margin-top: 0.5rem;
}

.c7:active {
  background-color: #DBE3FE;
}

.c7:focus {
  box-shadow: 0 0 0 0.25rem #DBE3FE;
}

.c7:hover:not(:active) {
  background-color: #F0F3FF;
}

.c7[disabled] {
  border-color: transparent;
  color: #D9DCE9;
}

.c4 {
  align-content: center;
  align-items: center;
  display: inline-grid;
  grid-auto-flow: column;
  grid-gap: 0.5rem;
}

.c10 {
  border-radius: 0.25rem;
  box-shadow: 0px 1px 6px rgba(49,52,64,0.2);
  background-color: #FFFFFF;
  color: #313440;
  margin: 0;
  max-height: 15.625rem;
  outline: none;
  overflow-y: auto;
  padding: 0.5rem 0;
  z-index: 1060;
}

.c6 {
  position: relative;
}

.c5 {
  position: absolute;
  visibility: hidden;
  z-index: -1070;
}

@media (min-width: 720px) {
  .c3+.bd-button {
    margin-top: 0;
    margin-left: 0.5rem;
  }
}

@media (min-width: 720px) {
  .c3 {
    width: auto;
  }
}

@media (min-width: 720px) {
  .c7+.bd-button {
    margin-top: 0;
    margin-left: 0.5rem;
  }
}

@media (min-width: 720px) {
  .c7 {
    width: auto;
    padding: 0;
    min-width: 2.25rem;
  }
}

<div
  class="c0 c1"
  data-testid="pilltabs-wrapper"
  role="list"
>
  <div
    class="c0 c2 "
    data-testid="pilltabs-pill-0"
    role="listitem"
  >
    <button
      class="c3 "
    >
      <span
        class="c4"
      >
        In stock
      </span>
    </button>
  </div>
  <div
    class="c0 c2 "
    data-testid="pilltabs-pill-1"
    role="listitem"
  >
    <button
      class="c3 "
    >
      <span
        class="c4"
      >
        Filter 2
      </span>
    </button>
  </div>
  <div
    class="c0 c2 c5"
    data-testid="pilltabs-pill-2"
    role="listitem"
  >
    <button
      class="c3 "
      disabled=""
    >
      <span
        class="c4"
      >
        Filter 3
      </span>
    </button>
  </div>
  <div
    class="c0 c2 "
    data-testid="pilltabs-dropdown-toggle"
    role="listitem"
  >
    <div
      class="c0 c6"
    >
      <button
        aria-activedescendant=""
        aria-controls=":ra:-menu"
        aria-expanded="false"
        aria-haspopup="menu"
        class="c7 bd-button"
        id=":ra:-toggle-button"
        role="button"
        tabindex="0"
      >
        <span
          class="c4"
        >
          <svg
            aria-labelledby=":rb:"
            class="c8"
            fill="currentColor"
            height="24"
            stroke="currentColor"
            stroke-width="0"
            viewBox="0 0 24 24"
            width="24"
          >
            <title
              id=":rb:"
            >
              add
            </title>
            <path
              d="M0 0h24v24H0V0z"
              fill="none"
            />
            <path
              d="M6 10c-1.1 0-2 .9-2 2s.9 2 2 2 2-.9 2-2-.9-2-2-2zm12 0c-1.1 0-2 .9-2 2s.9 2 2 2 2-.9 2-2-.9-2-2-2zm-6 0c-1.1 0-2 .9-2 2s.9 2 2 2 2-.9 2-2-.9-2-2-2z"
            />
          </svg>
        </span>
      </button>
      <div
        class="c9"
        style="position: absolute; left: 0px; top: 0px; transform: translate(0px, 4px);"
      >
        <ul
          aria-labelledby=":ra:-label"
          class="c10"
          id=":ra:-menu"
          role="menu"
        />
      </div>
    </div>
  </div>
</div>
`;

exports[`renders all the filters if they fit 1`] = `
.c8 {
  vertical-align: middle;
  height: 1.5rem;
  width: 1.5rem;
}

.c0 {
  box-sizing: border-box;
}

.c9 {
  box-sizing: border-box;
  z-index: 1060;
}

.c1 {
  flex-direction: row;
  flex-wrap: nowrap;
  display: flex;
}

.c2 {
  align-self: auto;
  flex-basis: auto;
  flex-grow: 0;
  order: 0;
  flex-shrink: 1;
}

.c3 {
  transition: all 150ms ease-out;
  transition-property: background-color,border-color,box-shadow,color;
  align-items: center;
  appearance: none;
  border: 1px solid #D9DCE9;
  border-radius: 0.25rem;
  color: #FFFFFF;
  cursor: pointer;
  display: inline-flex;
  flex: none;
  font-size: 1rem;
  font-weight: 400;
  height: 2.25rem;
  justify-content: center;
  line-height: 2rem;
  outline: none;
  padding: 0 1rem;
  position: relative;
  text-align: center;
  text-decoration: none;
  user-select: none;
  vertical-align: middle;
  white-space: nowrap;
  width: 100%;
  background-color: transparent;
  border-color: transparent;
  color: #3C64F4;
}

.c3.c3 {
  margin-right: 0.5rem;
}

.c3:focus {
  outline: none;
}

.c3[disabled] {
  border-color: #D9DCE9;
  pointer-events: none;
}

.c3+.bd-button {
  margin-top: 0.5rem;
}

.c3:active {
  background-color: #DBE3FE;
}

.c3:focus {
  box-shadow: 0 0 0 0.25rem #DBE3FE;
}

.c3:hover:not(:active) {
  background-color: #F0F3FF;
}

.c3[disabled] {
  border-color: transparent;
  color: #D9DCE9;
}

.c7 {
  transition: all 150ms ease-out;
  transition-property: background-color,border-color,box-shadow,color;
  align-items: center;
  appearance: none;
  border: 1px solid #D9DCE9;
  border-radius: 0.25rem;
  color: #FFFFFF;
  cursor: pointer;
  display: inline-flex;
  flex: none;
  font-size: 1rem;
  font-weight: 400;
  height: 2.25rem;
  justify-content: center;
  line-height: 2rem;
  outline: none;
  padding: 0 1rem;
  position: relative;
  text-align: center;
  text-decoration: none;
  user-select: none;
  vertical-align: middle;
  white-space: nowrap;
  width: 100%;
  background-color: transparent;
  border-color: transparent;
  color: #3C64F4;
}

.c7:focus {
  outline: none;
}

.c7[disabled] {
  border-color: #D9DCE9;
  pointer-events: none;
}

.c7+.bd-button {
  margin-top: 0.5rem;
}

.c7:active {
  background-color: #DBE3FE;
}

.c7:focus {
  box-shadow: 0 0 0 0.25rem #DBE3FE;
}

.c7:hover:not(:active) {
  background-color: #F0F3FF;
}

.c7[disabled] {
  border-color: transparent;
  color: #D9DCE9;
}

.c4 {
  align-content: center;
  align-items: center;
  display: inline-grid;
  grid-auto-flow: column;
  grid-gap: 0.5rem;
}

.c10 {
  border-radius: 0.25rem;
  box-shadow: 0px 1px 6px rgba(49,52,64,0.2);
  background-color: #FFFFFF;
  color: #313440;
  margin: 0;
  max-height: 15.625rem;
  outline: none;
  overflow-y: auto;
  padding: 0.5rem 0;
  z-index: 1060;
}

.c6 {
  position: relative;
}

.c5 {
  position: absolute;
  visibility: hidden;
  z-index: -1070;
}

@media (min-width: 720px) {
  .c3+.bd-button {
    margin-top: 0;
    margin-left: 0.5rem;
  }
}

@media (min-width: 720px) {
  .c3 {
    width: auto;
  }
}

@media (min-width: 720px) {
  .c7+.bd-button {
    margin-top: 0;
    margin-left: 0.5rem;
  }
}

@media (min-width: 720px) {
  .c7 {
    width: auto;
    padding: 0;
    min-width: 2.25rem;
  }
}

<div
  class="c0 c1"
  data-testid="pilltabs-wrapper"
  role="list"
>
  <div
    class="c0 c2 "
    data-testid="pilltabs-pill-0"
    role="listitem"
  >
    <button
      class="c3 "
    >
      <span
        class="c4"
      >
        In stock
      </span>
    </button>
  </div>
  <div
    class="c0 c2 "
    data-testid="pilltabs-pill-1"
    role="listitem"
  >
    <button
      class="c3 "
    >
      <span
        class="c4"
      >
        Filter 2
      </span>
    </button>
  </div>
  <div
    class="c0 c2 "
    data-testid="pilltabs-pill-2"
    role="listitem"
  >
    <button
      class="c3 "
    >
      <span
        class="c4"
      >
        Filter 3
      </span>
    </button>
  </div>
  <div
    class="c0 c2 c5"
    data-testid="pilltabs-dropdown-toggle"
    role="listitem"
  >
    <div
      class="c0 c6"
    >
      <button
        aria-activedescendant=""
        aria-controls=":r6:-menu"
        aria-expanded="false"
        aria-haspopup="menu"
        class="c7 bd-button"
        id=":r6:-toggle-button"
        role="button"
        tabindex="0"
      >
        <span
          class="c4"
        >
          <svg
            aria-labelledby=":r7:"
            class="c8"
            fill="currentColor"
            height="24"
            stroke="currentColor"
            stroke-width="0"
            viewBox="0 0 24 24"
            width="24"
          >
            <title
              id=":r7:"
            >
              add
            </title>
            <path
              d="M0 0h24v24H0V0z"
              fill="none"
            />
            <path
              d="M6 10c-1.1 0-2 .9-2 2s.9 2 2 2 2-.9 2-2-.9-2-2-2zm12 0c-1.1 0-2 .9-2 2s.9 2 2 2 2-.9 2-2-.9-2-2-2zm-6 0c-1.1 0-2 .9-2 2s.9 2 2 2 2-.9 2-2-.9-2-2-2z"
            />
          </svg>
        </span>
      </button>
      <div
        class="c9"
        style="position: absolute; left: 0px; top: 0px;"
      >
        <ul
          aria-labelledby=":r6:-label"
          class="c10"
          id=":r6:-menu"
          role="menu"
        />
      </div>
    </div>
  </div>
</div>
`;

exports[`renders dropdown if items do not fit 1`] = `
.c8 {
  vertical-align: middle;
  height: 1.5rem;
  width: 1.5rem;
}

.c0 {
  box-sizing: border-box;
}

.c9 {
  box-sizing: border-box;
  z-index: 1060;
}

.c1 {
  flex-direction: row;
  flex-wrap: nowrap;
  display: flex;
}

.c2 {
  align-self: auto;
  flex-basis: auto;
  flex-grow: 0;
  order: 0;
  flex-shrink: 1;
}

.c4 {
  transition: all 150ms ease-out;
  transition-property: background-color,border-color,box-shadow,color;
  align-items: center;
  appearance: none;
  border: 1px solid #D9DCE9;
  border-radius: 0.25rem;
  color: #FFFFFF;
  cursor: pointer;
  display: inline-flex;
  flex: none;
  font-size: 1rem;
  font-weight: 400;
  height: 2.25rem;
  justify-content: center;
  line-height: 2rem;
  outline: none;
  padding: 0 1rem;
  position: relative;
  text-align: center;
  text-decoration: none;
  user-select: none;
  vertical-align: middle;
  white-space: nowrap;
  width: 100%;
  background-color: transparent;
  border-color: transparent;
  color: #3C64F4;
}

.c4.c4 {
  margin-right: 0.5rem;
}

.c4:focus {
  outline: none;
}

.c4[disabled] {
  border-color: #D9DCE9;
  pointer-events: none;
}

.c4+.bd-button {
  margin-top: 0.5rem;
}

.c4:active {
  background-color: #DBE3FE;
}

.c4:focus {
  box-shadow: 0 0 0 0.25rem #DBE3FE;
}

.c4:hover:not(:active) {
  background-color: #F0F3FF;
}

.c4[disabled] {
  border-color: transparent;
  color: #D9DCE9;
}

.c7 {
  transition: all 150ms ease-out;
  transition-property: background-color,border-color,box-shadow,color;
  align-items: center;
  appearance: none;
  border: 1px solid #D9DCE9;
  border-radius: 0.25rem;
  color: #FFFFFF;
  cursor: pointer;
  display: inline-flex;
  flex: none;
  font-size: 1rem;
  font-weight: 400;
  height: 2.25rem;
  justify-content: center;
  line-height: 2rem;
  outline: none;
  padding: 0 1rem;
  position: relative;
  text-align: center;
  text-decoration: none;
  user-select: none;
  vertical-align: middle;
  white-space: nowrap;
  width: 100%;
  background-color: transparent;
  border-color: transparent;
  color: #3C64F4;
}

.c7:focus {
  outline: none;
}

.c7[disabled] {
  border-color: #D9DCE9;
  pointer-events: none;
}

.c7+.bd-button {
  margin-top: 0.5rem;
}

.c7:active {
  background-color: #DBE3FE;
}

.c7:focus {
  box-shadow: 0 0 0 0.25rem #DBE3FE;
}

.c7:hover:not(:active) {
  background-color: #F0F3FF;
}

.c7[disabled] {
  border-color: transparent;
  color: #D9DCE9;
}

.c5 {
  align-content: center;
  align-items: center;
  display: inline-grid;
  grid-auto-flow: column;
  grid-gap: 0.5rem;
}

.c10 {
  border-radius: 0.25rem;
  box-shadow: 0px 1px 6px rgba(49,52,64,0.2);
  background-color: #FFFFFF;
  color: #313440;
  margin: 0;
  max-height: 15.625rem;
  outline: none;
  overflow-y: auto;
  padding: 0.5rem 0;
  z-index: 1060;
}

.c6 {
  position: relative;
}

.c3 {
  position: absolute;
  visibility: hidden;
  z-index: -1070;
}

@media (min-width: 720px) {
  .c4+.bd-button {
    margin-top: 0;
    margin-left: 0.5rem;
  }
}

@media (min-width: 720px) {
  .c4 {
    width: auto;
  }
}

@media (min-width: 720px) {
  .c7+.bd-button {
    margin-top: 0;
    margin-left: 0.5rem;
  }
}

@media (min-width: 720px) {
  .c7 {
    width: auto;
    padding: 0;
    min-width: 2.25rem;
  }
}

<div
  class="c0 c1"
  data-testid="pilltabs-wrapper"
  role="list"
>
  <div
    class="c0 c2 c3"
    data-testid="pilltabs-pill-0"
    role="listitem"
  >
    <button
      class="c4 "
      disabled=""
    >
      <span
        class="c5"
      >
        In stock
      </span>
    </button>
  </div>
  <div
    class="c0 c2 c3"
    data-testid="pilltabs-pill-1"
    role="listitem"
  >
    <button
      class="c4 "
      disabled=""
    >
      <span
        class="c5"
      >
        Long filter name
      </span>
    </button>
  </div>
  <div
    class="c0 c2 "
    data-testid="pilltabs-dropdown-toggle"
    role="listitem"
  >
    <div
      class="c0 c6"
    >
      <button
        aria-activedescendant=""
        aria-controls=":r4:-menu"
        aria-expanded="false"
        aria-haspopup="menu"
        class="c7 bd-button"
        id=":r4:-toggle-button"
        role="button"
        tabindex="0"
      >
        <span
          class="c5"
        >
          <svg
            aria-labelledby=":r5:"
            class="c8"
            fill="currentColor"
            height="24"
            stroke="currentColor"
            stroke-width="0"
            viewBox="0 0 24 24"
            width="24"
          >
            <title
              id=":r5:"
            >
              add
            </title>
            <path
              d="M0 0h24v24H0V0z"
              fill="none"
            />
            <path
              d="M6 10c-1.1 0-2 .9-2 2s.9 2 2 2 2-.9 2-2-.9-2-2-2zm12 0c-1.1 0-2 .9-2 2s.9 2 2 2 2-.9 2-2-.9-2-2-2zm-6 0c-1.1 0-2 .9-2 2s.9 2 2 2 2-.9 2-2-.9-2-2-2z"
            />
          </svg>
        </span>
      </button>
      <div
        class="c9"
        style="position: absolute; left: 0px; top: 0px; transform: translate(0px, 4px);"
      >
        <ul
          aria-labelledby=":r4:-label"
          class="c10"
          id=":r4:-menu"
          role="menu"
        />
      </div>
    </div>
  </div>
</div>
`;
